package P7;

import java.io.IOException;

public class WeatherstackExample {

    public static void main(String[] args) throws IOException {
        new SeleccionCiudad();
    }
}